first of styling changes

--- a/src/components/Carosel.css
+++ b/src/components/Carosel.css
@@ -1,5 +1,6 @@
 body {
-  background-color: ;
+  background-color: #1b1b1e;
+  /* background-image: linear-gradient(#fff, #eeeeee); */
 }
 
 .slick-slide.slick-center img {
